# shader_tool

./: .gitmodules  CMakeLists.txt  header.h
include/: shader.h
shaders/: test.glsl
shaders/dir/: include.glsl  types.glsl
src/: compiler.c  internal.h  main.c  parser.c  preprocess.c  reflection.c  temp.c  utils.c
